tests/baselines/reference/MemberFunctionDeclaration3_es6.errors.txt
tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration3_es6.ts(2,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/es6/memberFunctionDeclarations/MemberFunctionDeclaration3_es6.ts (1 errors) ====
    class C {
       *[foo]() { }
        ~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
    }